# iService

./: README.md
device-association/: README.md
device-association/coupling_utils/: misc.py
device-association/crypto_performance/: analysis.py
device-association/crypto_performance/ppt/: CMakeLists.txt  README.md  comparison.py  ppt.cpp
device-association/light_grouping_pattern/: light_analysis.py  light_pattern.py  old_light_analysis.py  random_light_signal.py
device-association/localization/: localization_client.py  localization_server.py  remote_test_localization.py
device-association/log/: analysis.py  data_generator.py  misc.py
device-association/relay_attack/: analysis.py  clustering.py  outlier.py  signal_propagation.py
device-association/tvgl/: README.md  TVGL.py  example_tvgl.py  inferGraphL1.py  inferGraphL2.py  inferGraphLaplacian.py  inferGraphLinf.py  inferGraphPN.py  thetaSet
device-association/utils/: access_point.py  coupling_data.py  defaultordereddict.py  hostapd.conf  hostapd_template.conf  light_stream_connector.py  misc.py  outlier_detection.py  vector_similarity.py
home-control-app/app/: build.gradle
home-control-backend/: app.py  authorization_client.py  config.ini  config.py  evaluate_authorization.py  hotspot.conf  light_receiver_gateway.py  start_home_control.py  start_light_receiver.py  test_token_selector.py  websocket_client.py  websocket_server.py  wifi
home-control-backend/templates/: action.html  base.html  html_templates  index.html
private-service-discovery/: app.py  parse_rooms.py  rooms.html
private-service-discovery/templates/: index.html
wifi-authentication-app/app/: build.gradle
wifi-authentication-backend/: README.md  control_access_point.py  gui_access_point.py  hostapd_access_point.py  hostapd_template.conf  light_client.py  light_subscriber_access_point.py  password_broadcast_access_point.py  performance_deserialize_numpy.py  statistics_access_point.py  test_app.py  user_interface_access_point.py
wifi-authentication-backend/static/: Chart.min.js
wifi-authentication-backend/templates/: index.html  (+1 more)
(+253 files in other folders)
