cmake_minimum_required(VERSION 3.10)
project(PPT LANGUAGES CXX)

option(ENABLE_ABY "aby" OFF)
option(ENABLE_SEAL "seal" OFF)
option(ENABLE_HELIB "helib" OFF)

if(ENABLE_ABY)
	message("include aby")
	find_package(ABY REQUIRED)
endif(ENABLE_ABY)
if(ENABLE_SEAL)
	message("include seal")
	find_package(Threads REQUIRED)
	find_package(SEAL 2.3.1 EXACT REQUIRED)
endif(ENABLE_SEAL)
if(ENABLE_HELIB)
	message("include helib")
	include_directories(HElib/src)
endif(ENABLE_HELIB)

add_executable(ppt ppt.cpp)

if(ENABLE_ABY AND ENABLE_SEAL AND ENABLE_HELIB)
	message("link aby and seal and helib")
	add_definitions(-DENABLE_ABY -DENABLE_SEAL -DENABLE_HELIB)
	target_link_libraries(ppt SEAL::seal ABY::aby ${CMAKE_SOURCE_DIR}/HElib/src/fhe.a ntl)
elseif(ENABLE_ABY AND ENABLE_SEAL AND NOT ENABLE_HELIB)
	message("link aby and seal")
	add_definitions(-DENABLE_ABY -DENABLE_SEAL)
	target_link_libraries(ppt SEAL::seal ABY::aby)
elseif(ENABLE_ABY AND NOT ENABLE_SEAL AND ENABLE_HELIB)
	message("link aby and helib")
	add_definitions(-DENABLE_ABY -DENABLE_HELIB)
	target_link_libraries(ppt ABY::aby ${CMAKE_SOURCE_DIR}/HElib/src/fhe.a ntl)
elseif(NOT ENABLE_ABY AND ENABLE_SEAL AND ENABLE_HELIB)
	message("link seal and helib")
	add_definitions(-DENABLE_SEAL -DENABLE_HELIB)
	target_link_libraries(ppt SEAL::seal ${CMAKE_SOURCE_DIR}/HElib/src/fhe.a ntl -pthread -lgmp)
elseif(NOT ENABLE_ABY AND NOT ENABLE_SEAL AND ENABLE_HELIB)
	message("link helib")
	add_definitions(-DENABLE_HELIB)
	target_link_libraries(ppt ${CMAKE_SOURCE_DIR}/HElib/src/fhe.a ntl -pthread -lgmp)
elseif(NOT ENABLE_ABY AND ENABLE_SEAL AND NOT ENABLE_HELIB)
	message("link seal")
	add_definitions(-DENABLE_SEAL)
	target_link_libraries(ppt SEAL::seal)
elseif(ENABLE_ABY AND NOT ENABLE_SEAL AND NOT ENABLE_HELIB)
	message("link aby")
	add_definitions(-DENABLE_ABY)
	target_link_libraries(ppt ABY::aby)
elseif(NOT ENABLE_ABY AND NOT ENABLE_SEAL AND NOT ENABLE_HELIB)
	message("nothing to link")
endif()
